--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
 									<ul class="actions special">
 										<li><a href="https://github.com/AnalystTosh/Python/blob/main/FoodAPI.ipynb" class="button">View Project</a></li>
 									</ul>
+								</article>
+								<article>	
+									<header>										
+									<h2><a href="https://public.tableau.com/app/profile/clement.gitonga">Tableau Projects<br />
+										Using Python</a></h2>
+									</header>
+									<a href="https://public.tableau.com/app/profile/clement.gitonga" class="image fit"><img src="images/tableau.png" alt="" /></a>
+									<p> Tableau Projects on AirBnb Pricing and Video games sales
+									</p>
+									<ul class="actions special">
+										<li><a href="https://public.tableau.com/app/profile/clement.gitonga" class="button">View Project</a></li>
+									</ul>
 								</article>								
 							</section>
 
